--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "display": "standalone",
   "icons": [
       {
-          "src": "/java-project-b.scIT-group-2/CITSA.png",
+          "src": "/java-project-b.scIT-group-2/citsatalk.jpg",
           "type": "image/png",
           "sizes": "512x512"
       }
